# boids-algorithm

./: CMakeLists.txt  README.md
include/: BoidsAlgorithm.hpp  GetMedia.hpp  Renderer.hpp  avoid.hpp  bird.hpp  const.hpp  init.hpp  interactive.hpp
src/: BoidsAlgorithm.cpp  GetMedia.cpp  Renderer.cpp  bird.cpp  init.cpp  main.cpp
